deployments/code-client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coderealm-client
  namespace: coderealm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coderealm-client
  template:
    metadata:
      labels:
        app: coderealm-client
    spec:
      containers:
      - name: coderealm-client
        image: lokeshkatari/coderealm-client:latest
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
          requests:
            cpu: "0.5"
            memory: "256Mi"
