deployments/auth-grpc-service.yml
apiVersion: v1
kind: Service
metadata:
  name: coderealm-auth-service
  namespace: coderealm
spec:
  selector:
    app: coderealm-auth
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
