deployments/code-exec-service.yml
apiVersion: v1
kind: Service
metadata:
  name: code-exec-service
  namespace: coderealm
spec:
  selector:
    app: code-exec
  ports:
    - protocol: TCP
      port: 50052
      targetPort: 50052
